@@ -19,3 +19,6 @@ When using monotone as revision control system, a "mtn: operation canceled: Brok
      		}
      	}
      	close MTNLOG || debug("mtn log exited $?");
+
+> Thanks for the patch, and for testing the monotone backend.
+> applied [[done]] --[[Joey]]
