@@ -16,6 +16,8 @@ ikiwiki (2.71) UNRELEASED; urgency=low
   * meta: Pass info to htmlscrubber so htmlscrubber_skip can take effect.
   * htmlbalance: don't compact whitespace, and set misc other options (smcv)
   * rename: Fix double-escaping of page name in edit box.
+  * monotone: When getting the log, tell monotone how many entries
+    we want, rather than closing the pipe, which it dislikes. (thm)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
